# Calco

./: Cargo.toml  PROMPT-CALCO.md  README.md  ROADMAP.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: rust.yml
data/: application-x-calco.xml  br.com.w3ti.Calco.desktop  br.com.w3ti.Calco.metainfo.xml
packaging/: PKGBUILD  br.com.w3ti.Calco.yml  calco.spec
src/: clipboard.rs  csv.rs  find_replace.rs  format.rs  formula.rs  lib.rs  main.rs  model.rs  recent.rs  ui.rs  workbook.rs  xlsx.rs
src/main/: clipboard-io.ts  file-io.ts  index.ts  menu.ts  windows.ts
src/preload/: index.ts
src/renderer/: index.html  splash.html
src/renderer/app/: csv-import-dialog.ts  find-replace-bar.ts  formula-bar.ts  main.ts  sheet-tabs.ts  toolbar.ts
src/renderer/engine/: dimensions-store.ts  engine-adapter.ts  formula-locale.ts  style-store.ts
src/renderer/formats/: calco-format.ts  csv-format.ts  xlsx-format.ts
src/renderer/grid/: clipboard.ts  editor-overlay.ts  find-replace.ts  grid.ts  hit-test.ts  render.ts  selection.ts  used-region.ts  viewport.ts
src/shared/: ipc.ts  model.ts
tests/: rust_migration.rs
tests/engine/: dimensions-store.test.ts  engine-adapter.test.ts  formula-locale.test.ts  style-store.test.ts
tests/formats/: calco-format.test.ts  csv-format.test.ts  xlsx-format.test.ts
tests/grid/: clipboard.test.ts  find-replace.test.ts  selection.test.ts  used-region.test.ts  viewport.test.ts
