[package]
name = "calco"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Editor de planilhas Calco em Rust e GTK4"

[dependencies]
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
zip = { version = "8.6", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
calamine = "0.36"
rust_xlsxwriter = "0.96"
quick-xml = "0.41"

[profile.release]
lto = "thin"
strip = true
